generated/apps/apps-v1.Deployment-memos.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memos
  namespace: apps
spec:
  minReadySeconds: 10
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      name: memos
  template:
    metadata:
      labels:
        name: memos
    spec:
      containers:
      - env:
        - name: MEMOS_PORT
          value: "5230"
        image: neosmemo/memos:stable
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /healthz
            port: 5230
          initialDelaySeconds: 5
        name: memos
        readinessProbe:
          httpGet:
            path: /healthz
            port: 5230
          initialDelaySeconds: 5
        volumeMounts:
        - mountPath: /var/opt/memos
          name: memos-data
      volumes:
      - name: memos-data
        persistentVolumeClaim:
          claimName: memos-data
