generated/apps/v1.Endpoints-synology.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: synology
  namespace: apps
subsets:
- addresses:
  - ip: 192.168.0.200
  ports:
  - port: 5000
