generated/apps/v1.Service-actual.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: actual
  name: actual
  namespace: apps
spec:
  ports:
  - name: http
    port: 5006
    targetPort: 5006
  selector:
    name: actual
