generated/apps/v1.Service-memos.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: memos
  name: memos
  namespace: apps
spec:
  ports:
  - name: http
    port: 5230
    targetPort: 5230
  selector:
    name: memos
