generated/apps/v1.Service-synology.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: synology
  name: synology
  namespace: apps
spec:
  ports:
  - name: http
    port: 5000
    targetPort: 5000
  selector:
    name: synology
