generated/apps/gateway.networking.k8s.io-v1.HTTPRoute-actual.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: actual
  namespace: apps
spec:
  hostnames:
    - budget.o5s.lol
  parentRefs:
    - name: nginx-gateway
      namespace: network
  rules:
    - backendRefs:
        - name: actual
          port: 5006
      matches:
        - path:
            value: /
