generated/apps/gateway.networking.k8s.io-v1.HTTPRoute-memos.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: memos
  namespace: apps
spec:
  hostnames:
  - memos.o5s.lol
  parentRefs:
  - name: traefik-gateway
    namespace: network
  rules:
  - backendRefs:
    - name: memos
      port: 5230
    matches:
    - path:
        value: /
