generated/apps/gateway.networking.k8s.io-v1.HTTPRoute-synology.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: synology
  namespace: apps
spec:
  hostnames:
  - nas.o5s.lol
  parentRefs:
  - name: traefik-gateway
    namespace: network
  rules:
  - backendRefs:
    - name: synology
      port: 5000
    matches:
    - path:
        value: /
